welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for  (x<-0 to 6) {
               ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
	avance();
              ^